other-vpol/topologyspreadconstraints-policy/.kyverno-test-exceptions/resource.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: {name: badss03, namespace: policy-exceptions}
spec:
  replicas: 3
  selector: {matchLabels: {app: test}}
  template:
    metadata: {labels: {app: test}}
    spec: {containers: [{name: app, image: busybox:1.35}]}
